# mimir

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  project_status.md  pyproject.toml
api/: deps.py  main.py  schemas.py
approvals/: approval_queue.py  promotion_worker.py  rollback_watcher.py
context/: compression_engine.py  context_builder.py  relevance_ranker.py  token_budgeter.py
docs/: ACCESS_CONTROL_MATRIX.md  BACKUP_RESTORE.md  CURSOR_MCP_SETUP.md  DEPLOYMENT.md  MULTI_USER_SECURITY.md  OAUTH_SETUP.md  OPERATIONS.md  PUBLIC_GITHUB_SETUP.md  RELEASE_CHECKLIST.md  SELF_HOSTING.md  UPGRADE.md  architecture.md  install.md  migration.md  upgrade.md
evals/: __init__.py  base.py  load_test.py  release_gate.py  release_report.py  runner.py
graph/: graph_builder.py  graph_provider.py  graph_queries.py  memory_graph.py
mcp/: server.py
memory/: episodic_store.py  memory_consolidator.py  memory_extractor.py  memory_retriever.py  procedural_store.py  quarantine_detector.py  semantic_store.py  trust.py
metrics/: metrics_engine.py
migrations/: env.py
mimir/: __init__.py  config.py  logging.py  setup_profile.py
notifications/: pwa_push.py  slack_interactions.py  slack_notifier.py
reflections/: improvement_planner.py  reflection_engine.py
retrieval/: adaptive_weights.py  bootstrap_capsules.py  confidence.py  orchestrator.py  provider_stats.py  providers.py  retrieval_engine.py  task_categorizer.py
scripts/: bootstrap_mimir_project.sh  docker_smoke_test.sh  doctor.sh  (+5 more)
(+154 files in other folders)
